--- a/public/community.html
+++ b/public/community.html
@@ -6,6 +6,9 @@
   <title>Community</title>
 </head>
 <body>
+  <div class="back">
+    <a href="index.html"><img src="images/arrow.svg" alt=""><span>Back</span></a>
+  </div>
   <div class="community_page">
   <div class='container'>
     <div class="left">
@@ -22,7 +25,7 @@
             The 25+ digital initiatives include coding schools, cybersecurity program, NGO’s and startups. Are you looking for a physical
             desk/office in a digital community? Discover your community here and get in touch for a tour!<p>
         </div>
-        <!-- <a href="" class="btn">Join Us</a> -->
+      
       </div>
     </div>
     <div class="right">
