--- a/public/rooms.html
+++ b/public/rooms.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="back">
+    <a href="index.html"><img src="images/arrow.svg" alt=""><span>Back</span></a>
+  </div>
 <div class="rooms">
     <div>
         <div class="container">
@@ -49,20 +52,20 @@
                     <li id="board" class="room_link">The Boardroom</li>
                     <li id="foyer" class="room_link">The foyer</li>
                     <li id="studioc" class="room_link">Studio C</li>
-                    <li id="studior" class="room_link">Studio R</li>
+
                 </ul>
                 <div class="green_overlay"></div>
                 <div class="img_container_room">
-                    <img id="image" src="images/room1.jpeg" alt="">
+                    <img id="image" src="images/boardroom.jpg" alt="">
                 </div>
-                
+
                 <div class="room_box">
                     <div class="grey_overlay"></div>
                     <div class="name">
                         The Boardroom
                     </div>
                 </div>
-            
+
             </div>
         </div>
     </div>
