--- a/public/cofunders.html
+++ b/public/cofunders.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+  <div class="back">
+    <a href="index.html"><img src="images/arrow.svg" alt=""><span>Back</span></a>
+  </div>
   <div class="cofunders_page">
     <div class="container">
       <header>
