--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
             <div class="img_container mobile">
                 <div class="bg"></div>
                 <div class="img_container">
-                    <img src="images/cofunders.jpg" alt=""/>
+                    <img src="images/Learning.png" alt=""/>
                 </div>
             </div>
             <p class="reg-paragraphe">
@@ -161,7 +161,7 @@
         </div>
         <div class="img_container desktop">
             <div class="bg"></div>
-            <img src="images/cofunders.jpg" alt=""/>
+            <img src="images/Learning.png" alt=""/>
         </div>
     </div>
 </div>
@@ -220,42 +220,42 @@
             <div id="items-list">
                 <div class="bg"></div>
                 <div class="item">
-                    <img src="./images/wifi.png" class="join_us_icons" alt="">
+                    <img src="./images/if_wifi.svg" class="join_us_icons" alt="">
                     <div class="item-text">
                         <h3>Wifi </h3>
                     </div>
                     <div class="green-line"></div>
                 </div>
                 <div class="item">
-                    <img src="./images/table.png" class="join_us_icons" alt="">
+                    <img src="./images/if_computer.svg" class="join_us_icons" alt="">
                     <div class="item-text">
                         <h3>Rooms</h3>
                     </div>
                     <div class="green-line"></div>
                 </div>
                 <div class="item">
-                    <img src="./images/pin.png" class="join_us_icons" alt="">
+                    <img src="./images/if_location.svg" class="join_us_icons" alt="">
                     <div class="item-text">
                         <h3>Location </h3>
                     </div>
                     <div class="green-line"></div>
                 </div>
                 <div class="item">
-                    <img src="./images/network.png" class="join_us_icons" alt="">
+                    <img src="./images/if_user.svg" class="join_us_icons" alt="">
                     <div class="item-text">
                         <h3>Community </h3>
                     </div>
                     <div class="green-line"></div>
                 </div>
                 <div class="item">
-                    <img src="./images/coffee-cup.png" class="join_us_icons" alt="">
+                    <img src="./images/if_coffee.svg" class="join_us_icons" alt="">
                     <div class="item-text">
                         <h3>Drink</h3>
                     </div>
                     <div class="green-line"></div>
                 </div>
                 <div class="item">
-                    <img src="./images/24h.png" class="join_us_icons" alt="">
+                    <img src="./images/if_clock.svg" class="join_us_icons" alt="">
                     <div class="item-text">
                         <h3>Hours </h3>
                     </div>
