--- a/public/community.html
+++ b/public/community.html
@@ -53,6 +53,7 @@
       <div class="img-ctn"><a href="https://listminut.be/"><img src="images/logos/listminut.png" alt="listminut_logo"></a></div>
       <div class="img-ctn"><a href="http://www.hackyourfuture.be/"><img src="images/logos/hack.png" alt="hackyourfuture"></a></div>
       <div class="img-ctn"><a href="https://mediawijs.be/"><img src="images/logos/mediawijs.png" alt="mediawijs_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.linkedin.com/in/gaetan-j-van-ooteghem-256696b4/"><img src="images/logos/neurone.png" alt="neurone_logo"></a></div>
       <div class="img-ctn"><a href="https://nextmoov.be/"><img src="images/logos/nextmoov.png" alt="nextmoov_logo"></a></div>
       <div class="img-ctn"><a href="https://okfn.org/"><img src="images/logos/open_knowleg.png" alt="open_knowlege_logo"></a></div>
       <div class="img-ctn"><a href="http://www.solvay.edu/"><img src="images/logos/solvay.png" alt="solvay_logo"></a></div>
