--- a/public/footer.html
+++ b/public/footer.html
@@ -8,6 +8,8 @@
 <body>
   <footer>
     <div class="content">
+
+      <h2>Newsletter</h2>
 <ul>
     <li> <a href="https://www.linkedin.com/company/be-central-brussels/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
     <li> <a href="https://www.facebook.com/becentral/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
