--- a/public/index.html
+++ b/public/index.html
@@ -441,6 +441,7 @@
         <li> <a href="https://twitter.com/becentralbxl"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
         <li> <a href="https://www.instagram.com/becentral/?hl=fr"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
       </ul>
+      <h2>NewsLetter</h2>
       <div class='copyright'>
         © Becentral - 2018
       </div>
