--- a/public/rooms.html
+++ b/public/rooms.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -7,10 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-  <div class="back">
-    <a href="index.html"><img src="images/arrow.svg" alt=""><span>Back</span></a>
-  </div>
 <div class="rooms">
     <div>
         <div class="container">
@@ -21,15 +20,11 @@
                         <h2>Our Spaces</h2>
                     </div>
                     <div class="paragraphe">
-                        <div class="float">
-                            We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form of
-                            exchange involving digital knowledge, expertise, insights and expereiences intented to help
-                            people and companies forward.
-                        </div>
+                            We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form
+                            of exchange involving digital
+                            knowledge, expertise, insights and expereiences intented to help people and companies
+                            forward.
                     </div>
-                    <div class="button">
-                        <a href="#" class="animated-button">BOOK A ROOM</a>
-                        </div>
                 </div>
                 <div class="specs">
                     <div class="content">
@@ -41,7 +36,7 @@
                         <ul class="values">
                             <li id="capacity">110m²</li>
                             <li id="people">U-Shape : 25 p | Classroom : 30 p | Theater : 75 p</li>
-                            <li id="material">Micro | Beamer | Audio | Screen</li>
+                            <li id="material">Micro | Beamer | Audio | Screen</li>
                         </ul>
                     </div>
                 </div>
@@ -52,11 +47,11 @@
                     <li id="board" class="room_link">The Boardroom</li>
                     <li id="foyer" class="room_link">The foyer</li>
                     <li id="studioc" class="room_link">Studio C</li>
-
+                    <li id="studior" class="room_link">Studio R</li>
                 </ul>
                 <div class="green_overlay"></div>
                 <div class="img_container_room">
-                    <img id="image" src="images/boardroom.jpg" alt="">
+                    <img id="image" src="images/Boardroom.jpg" alt="">
                 </div>
 
                 <div class="room_box">
@@ -70,6 +65,102 @@
         </div>
     </div>
 </div>
+<!--<div class="formule1">
+    <div class="title">
+        <hr class="line"/>
+        <h2>Book a room</h2>
+    </div>
+    <div class="contain">
+        <div class="form_contact">
+            &lt;!&ndash; <h3>Contact us</h3> &ndash;&gt;
+            <form id="contact-form" class="form" action="#" method="POST" role="form">
+                <div id="first-group">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Name" tabindex="1"
+                               required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="first-name" name="name" placeholder="First-Name"
+                               tabindex="2" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Your Email"
+                               tabindex="3" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="company" name="company" placeholder="Company"
+                               tabindex="4" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="name-event" name="name-event"
+                               placeholder="Name of event" tabindex="5" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="number" class="form-control" id="attendees" name="attendees"
+                               placeholder="Number of attendees" tabindex="8" required>
+                    </div>
+                    <div class="form-group">
+                        <input id="date" type="text" placeholder="date" onfocus="(this.type='date')">
+                    </div>
+                    <div class="form-group">
+                        <input id="time" type="text" onfocus="(this.type='time')" placeholder="time">
+                    </div>
+                </div>
+
+                <div id="second-group">
+                    <div class="checkbox">
+                        <h4>Catering</h4>
+                        <div class="contain">
+                            <div class="form-group">
+                                <input type="checkbox" class="form-control" id="checkbox" name="breakfast"
+                                       placeholder="Breakfast" tabindex="9" required> <span>Breakfast</span> <span
+                                    class="checkmark"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" class="form-control" id="checkbox" name="lunch"
+                                       placeholder="Lunch" tabindex="10" required> <span>Lunch</span> <span
+                                    class="checkmark"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" class="form-control" id="checkbox" name="dinner"
+                                       placeholder="Dinner" tabindex="11" required> <span>Dinner</span> <span
+                                    class="checkmark"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" class="form-control" id="checkbox" name="reception"
+                                       placeholder="Reception" tabindex="12" required> <span>Reception</span> <span
+                                    class="checkmark"></span>
+                            </div>
+                        </div>
+                        <div class="send_msg">
+                            <h4>Message</h4>
+                            <div class="msg">
+                                <textarea name="message" class="form-control" id="message" placeholder="..."
+                                          tabindex="13" required></textarea>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="button">
+                    <button type="button" name="button">send</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>-->
 </body>
 <script src="app.js"></script>
+<script>
+    var roomButton = document.querySelector('#roomButton');
+    var form = document.querySelector('.modal');
+    roomButton.addEventListener('click', function () {
+        form.style.display = "block";
+
+        $('.closing').click(function () {
+            form.style.display = "none";
+        })
+    });
+</script>
 </html>
