--- a/public/rooms.html
+++ b/public/rooms.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,9 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-
 <body>
 <div class="rooms">
+    <div class="back">
+        <a href="index.html"><img src="images/arrow.svg" alt=""><span>Back</span></a>
+    </div>
     <div>
         <div class="container">
             <div class="left">
@@ -20,10 +21,17 @@
                         <h2>Our Spaces</h2>
                     </div>
                     <div class="paragraphe">
+                        <div class="float">
                             We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form
-                            of exchange involving digital
-                            knowledge, expertise, insights and expereiences intented to help people and companies
-                            forward.
+                            of
+                            exchange involving digital knowledge, expertise, insights and expereiences intented to help
+                            people and companies forward.
+                        </div>
+                        <div class="buttonContent">
+                            <div class="button">
+                                <a href="#" id="roomButton" class="animated-button">BOOK A ROOM</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="specs">
@@ -47,11 +55,11 @@
                     <li id="board" class="room_link">The Boardroom</li>
                     <li id="foyer" class="room_link">The foyer</li>
                     <li id="studioc" class="room_link">Studio C</li>
-                    <li id="studior" class="room_link">Studio R</li>
+
                 </ul>
                 <div class="green_overlay"></div>
                 <div class="img_container_room">
-                    <img id="image" src="images/Boardroom.jpg" alt="">
+                    <img id="image" src="images/boardroom.jpg" alt="">
                 </div>
 
                 <div class="room_box">
@@ -65,49 +73,61 @@
         </div>
     </div>
 </div>
-<!--<div class="formule1">
-    <div class="title">
-        <hr class="line"/>
-        <h2>Book a room</h2>
+<div class="modal">
+    <div class="closeButton">
+        <img src="images/close.png" alt="close button" class="closing">
     </div>
-    <div class="contain">
-        <div class="form_contact">
-            &lt;!&ndash; <h3>Contact us</h3> &ndash;&gt;
-            <form id="contact-form" class="form" action="#" method="POST" role="form">
-                <div id="first-group">
+    <div class="form">
+        <div class="container">
+
+            <div class="form_contact">
+                <h3>Contact us</h3>
+                <form id="contact-form" class="form" action="#" method="POST" role="form">
                     <div class="form-group">
+                        <label class="form-label" for="name">Name</label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Name" tabindex="1"
                                required>
                     </div>
                     <div class="form-group">
+                        <label class="form-label" for="name">First-Name</label>
                         <input type="text" class="form-control" id="first-name" name="name" placeholder="First-Name"
                                tabindex="2" required>
                     </div>
                     <div class="form-group">
+                        <label class="form-label" for="email">Email</label>
                         <input type="email" class="form-control" id="email" name="email" placeholder="Your Email"
                                tabindex="3" required>
                     </div>
                     <div class="form-group">
+                        <label class="form-label" for="company">Company</label>
                         <input type="text" class="form-control" id="company" name="company" placeholder="Company"
                                tabindex="4" required>
                     </div>
                     <div class="form-group">
+                        <label class="form-label" for="name-event">Name of event</label>
                         <input type="text" class="form-control" id="name-event" name="name-event"
                                placeholder="Name of event" tabindex="5" required>
                     </div>
-                    <div class="form-group">
+                    <div class="number">
+                        <div class="form-group">
+                            <label class="form-label" for="date-event">Date of event</label>
+                            <h4>Date of event</h4>
+                            <input type="date" class="form-control" id="date-event" name="date-event"
+                                   placeholder="Date of event" tabindex="6" required>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label" for="time-event">Time of event</label>
+                            <h4>Time of event</h4>
+                            <input type="time" class="form-control" id="time" name="time-event"
+                                   placeholder="Time of event" tabindex="7" required>
+                        </div>
+                    </div>
+                    <div class="form-group_number">
+                        <label class="form-label" for="attendees">Number of attendees</label>
                         <input type="number" class="form-control" id="attendees" name="attendees"
                                placeholder="Number of attendees" tabindex="8" required>
                     </div>
-                    <div class="form-group">
-                        <input id="date" type="text" placeholder="date" onfocus="(this.type='date')">
-                    </div>
-                    <div class="form-group">
-                        <input id="time" type="text" onfocus="(this.type='time')" placeholder="time">
-                    </div>
-                </div>
 
-                <div id="second-group">
                     <div class="checkbox">
                         <h4>Catering</h4>
                         <div class="contain">
@@ -132,26 +152,71 @@
                                     class="checkmark"></span>
                             </div>
                         </div>
-                        <div class="send_msg">
-                            <h4>Message</h4>
-                            <div class="msg">
-                                <textarea name="message" class="form-control" id="message" placeholder="..."
-                                          tabindex="13" required></textarea>
-                            </div>
+                    </div>
+                    <div class="form-group">
+
+                        <h4>Message</h4>
+                        <div class="msg">
+                            <textarea name="message" class="form-control" id="message" placeholder="..." tabindex="13"
+                                      required></textarea>
                         </div>
                     </div>
-
-                </div>
-
-                <div class="button">
-                    <button type="button" name="button">send</button>
-                </div>
-            </form>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-start-order">Send</button>
+                    </div>
+                </form>
+            </div>
+            <!--
+                  <div class="right">
+                    <div class="imgcontainer">
+                      <img src="images/test_form.jpg" alt=""> -->
         </div>
     </div>
-</div>-->
-</body>
+</div>
+</div>
 <script src="app.js"></script>
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous">
+</script>
+
+<script>
+    $(document).ready(function () {
+        // Test for placeholder support
+        $.support.placeholder = (function () {
+            var i = document.createElement('input');
+            return 'placeholder' in i;
+        })();
+        // Hide labels by default if placeholders are supported
+        if ($.support.placeholder) {
+            $('.form-label').each(function () {
+                $(this).addClass('js-hide-label');
+            });
+            // Code for adding/removing classes here
+            $('.form-group').find('input, textarea').on('keyup blur focus', function (e) {
+                // Cache our selectors
+                var $this = $(this),
+                    $parent = $this.parent().find("label");
+                if (e.type == 'keyup') {
+                    if ($this.val() == '') {
+                        $parent.addClass('js-hide-label');
+                    } else {
+                        $parent.removeClass('js-hide-label');
+                    }
+                } else if (e.type == 'blur') {
+                    if ($this.val() == '') {
+                        $parent.addClass('js-hide-label');
+                    } else {
+                        $parent.removeClass('js-hide-label').addClass('js-unhighlight-label');
+                    }
+                } else if (e.type == 'focus') {
+                    if ($this.val() !== '') {
+                        $parent.removeClass('js-unhighlight-label');
+                    }
+                }
+            });
+        }
+    });
+</script>
 <script>
     var roomButton = document.querySelector('#roomButton');
     var form = document.querySelector('.modal');
@@ -163,4 +228,5 @@
         })
     });
 </script>
+</body>
 </html>
