--- a/public/community.html
+++ b/public/community.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="app.css"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -44,7 +45,7 @@
       <div class="img-ctn"><a href="http://dcbrain.com/"><img src="images/logos/dc.png" alt="dcbrain_logo"></a></div>
       <div class="img-ctn"><a href="http://digi-bridge.org/"><img src="images/logos/digi-bridge.png" alt="digi-bridge_logo"></a></div>
       <div class="img-ctn"><a href="http://www.demsoc.org/"><img src="images/logos/demo.png" alt="demo_logo"></a></div>
-      <div class="img-ctn"><a href="https://www.proximus.com/fr/foundation"><img src="images/logos/demo.png" alt="digitalent_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.proximus.com/fr/foundation"><img src="images/logos/digitalent.png" alt="digitalent_logo"></a></div>
       <div class="img-ctn"><a href="http://duvalunionacademy.com/"><img src="images/logos/Duval.png" alt="duvalunionacademy_logo"></a></div>
       <div class="img-ctn"><a href="https://www.esn.eu/home/"><img src="images/logos/esn.png" alt="Esn_logo"></a></div>
       <div class="img-ctn"><a href="https://faqbot.co/"><img src="images/logos/Faqbot.png" alt="Faqbot_logo"></a></div>
