--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="assets/scss/base/_base.scss"/>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -66,6 +65,22 @@
 </div>
 
 
+<nav class="main-mobile-nav">
+    <button id="closeMobile">x fermer</button>
+    <div class="container">
+        <img src="images/becentralLogoVert.png" alt="" class="logo">
+        <ul>
+            <li><a href="#" class="mobileLink" id='aboutbtnMobile'>About</a></li>
+            <li><a href="#" class="mobileLink" id='cofoundersbtnMobile'>Co-founders</a></li>
+            <li><a href="#" class="mobileLink" id='communitybtnMobile'>Community</a></li>
+            <li><a href="#" class="mobileLink" id='joinusbtnMobile'>Join us</a></li>
+            <li><a href="#" class="mobileLink" id='spacesbtnMobile'>Spaces</a></li>
+            <li><a href="#" class="mobileLink" id='evmtbtnMobile'>Event</a></li>
+            <li><a href="#" class="mobileLink" id='contactbtnMobile'>Contact</a></li>
+        </ul>
+    </div>
+</nav>
+<button id="ham">menu hamburger</button>
 <nav class="main-nav">
     <div class="container">
         <img src="images/becentralLogoVert.png" alt="" class="logo">
@@ -118,10 +133,10 @@
                     <h2>Ticket To Digital</h2>
                 </div>
                 <p class="reg-paragraphe">
-                    BeCentral is a new digital campus located in Brussels Central Station. <br> Cofounded & backed-up by
+                    BeCentral is a new digital campus located in Brussels Central Station. Cofounded & backed-up by
                     more than 40 entrepreneurs, we’re on a mission to close the digital skills gap and help to
                     accelerate Belgium’s Digital Transformation. How
-                    do we do this ? <br> By hosting digital schools or workshops in an entrepreneurial ecosystem. Check
+                    do we do this ? By hosting digital schools or workshops in an entrepreneurial ecosystem. Check
                     out our fantastic 30+ initiatives, our next events and available workshops below!
                 </p>
 
@@ -283,7 +298,7 @@
                     <hr class="line">
                     <h2>Spaces</h2>
                 </div>
-                <div class="mobile-img"><img src="./images/BECENTRAL_21032018_web_960p-1.jpg" alt="rooms_©Ersan Memić"></div>
+                <div class="mobile-img"></div>
                 <p class="reg-paragraphe">
                     Are you looking for a central place to host your digital event? Our campus has plenty of rooms for
                     trainings, workshops, meetings or even fancy award ceremonies! Fill in the questionnaire to check
