--- a/public/cofunders.html
+++ b/public/cofunders.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" type="text/css" href="app.css"/>
   <meta charset="utf-8">
   <title>Cofunders & Ambassadors</title>
 </head>
