--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <link rel="apple-touch-icon" sizes="152x152" href="images/favicons/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
+      <link rel="manifest" href="images/favicons/site.webmanifest">
+      <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+      <meta name="msapplication-TileColor" content="#da532c">
+      <meta name="theme-color" content="#ffffff">
 </head>
-<title>Document</title>
+<title>BeCentral</title>
 </head>
 <body>
 
@@ -98,9 +105,7 @@
 </nav>
 
 <header class="headerVideo">
-    <video autoplay loop>
-        <source src="images/becentral.mp4" id="bgVideo">
-    </video>
+
     <div class="content ticket">
         <img src="images/becentralLogo.png" alt="" class="logoBe">
         <div>
@@ -124,7 +129,7 @@
             <div class="img_container">
                 <div class="bg"></div>
                 <div class="img-subContainer">
-                    <img src="images/tickettodigital.jpg" alt="Ticket-to-digital ©Ersan Memić ">
+                    <img src="images/ticket.jpg" alt="Ticket-to-digital ©Ersan Memić ">
                 </div>
             </div>
             <div class="paragraphe">
