--- a/public/index.html
+++ b/public/index.html
@@ -66,21 +66,25 @@
 
 
 <nav class="main-mobile-nav">
-    <button id="closeMobile">x fermer</button>
+    <div id="closeMobile">
+        <img src="images/close.png" alt="">
+    </div>
     <div class="container">
         <img src="images/becentralLogoVert.png" alt="" class="logo">
         <ul>
-            <li><a href="#" class="mobileLink" id='aboutbtnMobile'>About</a></li>
-            <li><a href="#" class="mobileLink" id='cofoundersbtnMobile'>Co-founders</a></li>
-            <li><a href="#" class="mobileLink" id='communitybtnMobile'>Community</a></li>
-            <li><a href="#" class="mobileLink" id='joinusbtnMobile'>Join us</a></li>
-            <li><a href="#" class="mobileLink" id='spacesbtnMobile'>Spaces</a></li>
-            <li><a href="#" class="mobileLink" id='evmtbtnMobile'>Event</a></li>
-            <li><a href="#" class="mobileLink" id='contactbtnMobile'>Contact</a></li>
+            <li class="LinkBurger"><a href="#" class="mobileLink" id='aboutbtnMobile'>About</a></li>
+            <li class="LinkBurger"><a href="#" class="mobileLink" id='cofoundersbtnMobile'>Co-founders</a></li>
+            <li class="LinkBurger"><a href="#" class="mobileLink" id='communitybtnMobile'>Community</a></li>
+            <li class="LinkBurger"><a href="#" class="mobileLink" id='joinusbtnMobile'>Join us</a></li>
+            <li class="LinkBurger"><a href="#" class="mobileLink" id='spacesbtnMobile'>Spaces</a></li>
+            <li class="LinkBurger"><a href="#" class="mobileLink" id='evmtbtnMobile'>Event</a></li>
+            <li class="LinkBurger"><a href="#" class="mobileLink" id='contactbtnMobile'>Contact</a></li>
         </ul>
     </div>
 </nav>
-<button id="ham">menu hamburger</button>
+<div id="ham">
+    <img src="images/hamburger.png" alt="">
+</div>
 <nav class="main-nav">
     <div class="container">
         <img src="images/becentralLogoVert.png" alt="" class="logo">
@@ -398,8 +402,12 @@
         </ul>
         <h2 id="footerNews">NewsLetter</h2>
         <div class='copyright'>
-            © Becentral - 2018
+            © Becentral - 2018<br>
+            <a href="">Kevin Somao <br></a>
+            <a href="">Kevin Flabat <br></a>
+            <a href="">Delphine Braive <br></a>
         </div>
+
     </div>
 </footer>
 </body>
