--- a/public/rooms.html
+++ b/public/rooms.html
@@ -193,6 +193,20 @@
         </div>
     </div>
 </div>
+<script>
+    var roomButton = document.querySelector('#roomButton');
+    var closeButton = document.querySelector('.closing');
+    var form = document.querySelector('.modal');
+
+    roomButton.addEventListener('click', function () {
+        form.style.display = "block";
+    });
+
+    closeButton.addEventListener('click', function () {
+        form.style.display = "none";
+    });
+
+</script>
 <script src="app.js"></script>
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
