--- a/public/bonsite/community.html
+++ b/public/bonsite/community.html
@@ -58,7 +58,7 @@
       <div class="img-ctn"><a href="https://faqbot.co/"><img src="images/logos/Faqbot.png" alt="Faqbot_logo"></a></div>
       <div class="img-ctn"><a href="https://www.fishtripr.com/"><img src="images/logos/fish.png" alt="fishtrip_logo"></a></div>
       <div class="img-ctn"><a href="https://www.globalshapers.org"><img src="images/logos/global_F.png" alt="Global_logo"></a></div>
-      <div class="img-ctn"><a href="https://learndigital.withgoogle.com/atelierdigital-be"><img src="images/logos/Google.png" alt="Google_logo"></a></div>
+      <div class="img-ctn"><a href="https://learndigital.withgoogle.com/atelierdigital-be"><img src="images/logos/google.png" alt="Google_logo"></a></div>
       <div class="img-ctn"><a href="https://listminut.be/"><img src="images/logos/listminut.png" alt="listminut_logo"></a></div>
       <div class="img-ctn"><a href="http://www.hackyourfuture.be/"><img src="images/logos/hack.png" alt="hackyourfuture"></a></div>
       <div class="img-ctn"><a href="https://mediawijs.be/"><img src="images/logos/mediawijs.png" alt="mediawijs_logo"></a></div>
@@ -82,4 +82,3 @@
   <script src="app.js"></script>
 </body>
 </html>
-			
